ניקיון: הסרת קובץ טיוטה זמני

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,11 @@
     </style>
 </head>
 <body>
+    <div style="margin-bottom: 15px;">
+        <a href="presets_wol_settings.html" style="padding: 10px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 4px; font-size: 1.1em;">
+            נהל פריסטים ו-Wake on LAN
+        </a>
+    </div>
     <h1>Discovered UPnP Devices</h1>
     <ul id="device-list">
         <!-- רשימת המכשירים תוצג כאן -->
