--- a/packages/server/public/presets_wol_settings.html
+++ b/packages/server/public/presets_wol_settings.html
@@ -157,6 +157,11 @@
                     <small>פורמט: XX:XX:XX:XX:XX:XX</small>
                 </div>
                 <div class="form-group">
+                    <label for="preset-renderer-broadcast">כתובת שידור (Broadcast Address) של ה-Renderer:</label>
+                    <input type="text" id="preset-renderer-broadcast" placeholder="לדוגמה: 192.168.1.255" required pattern="^(?:[0-9]{1,3}\.){3}[0-9]{1,3}$">
+                    <small>פורמט: XXX.XXX.XXX.XXX</small>
+                </div>
+                <div class="form-group">
                     <label for="preset-mediaserver-udn">Media Server UDN (אופציונלי):</label>
                      <select id="preset-mediaserver-udn">
                         <option value="">בחר Media Server (אופציונלי)</option>
