Refactor: הטמעת ActiveDeviceManager ושיפור מקיף בניהול התקנים
- הטמעת ActiveDeviceManager כרכיב מרכזי לניהול התקנים בחבילת dlna-core.
- עדכון upnpDeviceExplorer (dlna-core) ו-deviceManager (server) לשימוש ב-ActiveDeviceManager.
- שיפור מבנה הנתונים של התקנים ושירותים, כולל שימוש ב-Map ועדכון טיפוסים.
- עדכונים ל-upnpDeviceProcessor להתאמה לשינויים.
- כתיבה ותיקונים מקיפים לבדיקות היחידה של ActiveDeviceManager, וכעת כל הבדיקות עבורו עוברות.
- עדכון ותיקונים לבדיקות אינטגרציה ובדיקות אחרות.
- תיעוד החלטות עיצוב נוספות ובעיות פתוחות בבדיקות של upnpDeviceProcessor בקובץ התכנון.
- מחיקת קבצים ישנים ועדכוני תיעוד קלים.

שינויים אלו מיישמים את רוב שלבי תוכנית השיפור של מודול ניהול ההתקנים, ומביאים לשיפור משמעותי ביציבות ובכיסוי הבדיקות של רכיבים מרכזיים.

בעיות פתוחות (להמשך טיפול):
- עדיין קיימים 10 כשלונות ו-4 שגיאות בבדיקות של upnpDeviceProcessor.test.ts, בעיקר סביב החזרת null לא צפוי מהפונקציה processUpnpDevice.
- קיימת שגיאת ENOENT בבדיקה server_api_devices_fetch_test.ts בעת ניסיון להריץ את השרת.

--- a/packages/server/public/browser.html
+++ b/packages/server/public/browser.html
@@ -361,20 +361,19 @@
                     }
                     const devices = await response.json();
                     availableRenderers = devices.filter(device => {
-                        const services = device.serviceList || (device.device && device.device.serviceList); // תמיכה בשני המבנים
-                        if (services && Array.isArray(services.service)) {
-                            return services.service.some(service => service.serviceId === 'urn:schemas-upnp-org:service:AVTransport:1');
-                        } else if (services && services.service && typeof services.service === 'object') { // מקרה של שירות יחיד
-                             return services.service.serviceId === 'urn:schemas-upnp-org:service:AVTransport:1';
+                        // המבנה החדש: device.serviceList הוא אובייקט של שירותים
+                        if (device.serviceList && typeof device.serviceList === 'object') {
+                            for (const serviceKey in device.serviceList) {
+                                const service = device.serviceList[serviceKey];
+                                if (service && service.serviceType === 'urn:schemas-upnp-org:service:AVTransport:1') {
+                                    return true; // מצאנו שירות AVTransport
+                                }
+                            }
                         }
-                        // תמיכה במבנה של supportedServices (אם קיים)
-                        if(device.supportedServices && Array.isArray(device.supportedServices)){
-                            return device.supportedServices.includes('urn:schemas-upnp-org:service:AVTransport:1');
-                        }
-                        return false;
+                        return false; // לא נמצא שירות AVTransport
                     }).map(device => ({
-                        udn: device.udn,
-                        friendlyName: device.friendlyName || (device.device && device.device.friendlyName) || 'Unknown Renderer'
+                        udn: device.UDN, // שימוש ב-UDN כפי שמוחזר מהשרת
+                        friendlyName: device.friendlyName || 'Unknown Renderer'
                     }));
 
                     renderersLoaded = true;
