--- a/drafts/remote-control/index.html
+++ b/drafts/remote-control/index.html
@@ -48,6 +48,7 @@
             display: flex;
             gap: 10px;
             margin-bottom: 15px;
+            flex-wrap: wrap;
         }
 
         input[type="text"] {
@@ -185,7 +186,7 @@
         <h1>שלט רחוק WebOS</h1>
 
         <div id="main-content-wrapper">
-            <div id="left-column" style="flex: 2; display: flex; flex-direction: column;">
+            <div id="left-column" style="flex: 2; display: flex; flex-direction: column; max-width: 400px;">
                 <div class="card">
                     <h2>התחברות</h2>
                     <div class="input-group">
@@ -225,6 +226,14 @@
                             <label for="continuous-screenshot-cb">רציף</label>
                         </div>
                     </div>
+
+                    <h2>הקלדה</h2>
+                    <div class="input-group">
+                        <input type="text" id="text-input" placeholder="הקלד כאן..." style="flex-grow: 1;">
+                        <button id="enter-btn">שלח Enter</button>
+                        <button id="delete-btn">מחק תו</button>
+                    </div>
+
                     <div id="toast-input" class="input-group">
                         <input type="text" id="toast-message" placeholder="הודעה להצגה">
                         <button id="send-toast-btn">שלח</button>
@@ -239,7 +248,8 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="./index.js" ></script>
+    <script src="./client.js" ></script>
 
 </body>
 
