תיקוני קליינט עבור דפדפן

--- a/packages/proxy-server/public/remote-control/index.html
+++ b/packages/proxy-server/public/remote-control/index.html
@@ -248,7 +248,7 @@
         </div>
     </div>
 
-    <script src="dist/client.js" type="module"></script>
+    <script src="./dist/client.js" type="module"></script>
 
 </body>
 
