--- a/drafts/remote-control/index.html
+++ b/drafts/remote-control/index.html
@@ -178,6 +178,129 @@
                 margin-bottom: 0;
             }
         }
+
+        .connection-type-selector {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .radio-button {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            cursor: pointer;
+            padding: 10px 20px;
+            border-radius: 20px;
+            background-color: #f0f2f5;
+            transition: background-color 0.2s, box-shadow 0.2s;
+            user-select: none;
+        }
+
+        .radio-button:hover {
+            background-color: #e4e6eb;
+        }
+
+        .radio-button input[type="radio"]:checked + span {
+            font-weight: bold;
+        }
+
+        .radio-button:has(input[type="radio"]:checked) {
+            background-color: #e7f3ff;
+            box-shadow: 0 0 0 2px #1877f2;
+        }
+
+        .radio-button input[type="radio"] {
+            margin: 0;
+            cursor: pointer;
+        }
+
+        .connection-form {
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        .tv-select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #dddfe2;
+            border-radius: 6px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .tv-select:focus {
+            outline: none;
+            border-color: #1877f2;
+            box-shadow: 0 0 0 2px rgba(24, 119, 242, 0.2);
+        }
+
+        .tv-details {
+            margin-top: 15px;
+            padding: 15px;
+            background-color: #f7f8fa;
+            border-radius: 6px;
+            border: 1px solid #dddfe2;
+            animation: fadeIn 0.3s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-5px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .detail-row {
+            display: flex;
+            margin-bottom: 8px;
+            align-items: center;
+        }
+
+        .detail-row:last-child {
+            margin-bottom: 0;
+        }
+
+        .detail-label {
+            font-weight: 600;
+            min-width: 80px;
+            color: #1c1e21;
+        }
+
+        .detail-value {
+            color: #65676b;
+            font-family: 'Courier New', monospace;
+        }
+
+        .proxy-option {
+            margin-top: 10px;
+            padding: 10px;
+            background-color: #f7f8fa;
+            border-radius: 6px;
+            border: 1px solid #dddfe2;
+        }
+
+        .checkbox-label {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            cursor: pointer;
+            user-select: none;
+        }
+
+        .checkbox-label input[type="checkbox"] {
+            cursor: pointer;
+        }
+
+        #proxy-url {
+            margin-top: 10px;
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -189,13 +312,66 @@
             <div id="left-column" style="flex: 2; display: flex; flex-direction: column; max-width: 400px;">
                 <div class="card">
                     <h2>התחברות</h2>
+                    
+                    <!-- כפתורי בחירת שיטת התחברות -->
+                    <div class="connection-type-selector">
+                        <label class="radio-button">
+                            <input type="radio" name="connection-type" value="manual" checked>
+                            <span>הזנה ידנית</span>
+                        </label>
+                        <label class="radio-button">
+                            <input type="radio" name="connection-type" value="list">
+                            <span>בחירה מרשימה</span>
+                        </label>
+                    </div>
+
+                    <!-- טופס הזנה ידנית -->
+                    <div id="manual-connection" class="connection-form">
+                        <div class="input-group">
+                            <input type="text" id="tv-ip" placeholder="הכנס כתובת IP של הטלוויזיה">
+                            <input type="text" id="client-key" placeholder="מפתח לקוח (אופציונלי)">
+                        </div>
+                    </div>
+
+                    <!-- טופס בחירה מרשימה -->
+                    <div id="list-connection" class="connection-form" style="display: none;">
+                        <div class="input-group">
+                            <select id="tv-select" class="tv-select">
+                                <option value="">בחר טלוויזיה...</option>
+                            </select>
+                        </div>
+                        <!-- פרטי הטלוויזיה הנבחרת -->
+                        <div id="selected-tv-details" class="tv-details" style="display: none;">
+                            <div class="detail-row">
+                                <span class="detail-label">שם:</span>
+                                <span class="detail-value" id="selected-tv-name"></span>
+                            </div>
+                            <div class="detail-row">
+                                <span class="detail-label">IP:</span>
+                                <span class="detail-value" id="selected-tv-ip"></span>
+                            </div>
+                            <div class="detail-row">
+                                <span class="detail-label">MAC:</span>
+                                <span class="detail-value" id="selected-tv-mac"></span>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="input-group">
-                        <input type="text" id="tv-ip" placeholder="הכנס כתובת IP של הטלוויזיה">
-                        <input type="text" id="client-key" placeholder="מפתח לקוח (אופציונלי)">
                         <button id="connect-btn">התחבר</button>
                     </div>
-                    <p><strong>הערה:</strong> אם זו הפעם הראשונה, יש לאשר את החריגה האבטחתית בדפדפן. <a id="cert-link"
-                            href="#" target="_blank" style="display: none;">פתח קישור לאישור תעודה</a>.</p>
+
+                    <!-- תיבת סימון לשימוש בפרוקסי -->
+                    <div class="proxy-option">
+                        <label class="checkbox-label">
+                            <input type="checkbox" id="use-proxy-cb">
+                            <span>השתמש בפרוקסי (עוקף CORS)</span>
+                        </label>
+                        <input type="text" id="proxy-url" placeholder="כתובת פרוקסי (ברירת מחדל: localhost:3005)" style="display: none;">
+                    </div>
+
+                    <p><strong>הערה:</strong> אם זו הפעם הראשונה, יש לאשר את החריגה האבטחתית בדפדפן.
+                        <a id="cert-link" href="#" target="_blank" style="display: none;">פתח קישור לאישור תעודה</a>.</p>
                     <div id="status" class="status disconnected">לא מחובר</div>
                 </div>
                 <div id="controls" class="card" style="display: none;">
